refactor: rebuild as AI coach with Telegram bot
- Domain-based coaching system (sport, nutrition, yoga, reading, cinema, music, relationships, work)
- Telegram bot with inline domain selection and auto-routing
- Morning/evening check-ins and weekly summary via scheduler
- Anthropic Claude via Spring AI 1.0.0
- pgvector for future RAG memory